legacy/v1.5.4-beta/README.zh-CN.md
# B站屏蔽助手

这是我自己在用的一个 B 站网页端扩展。给不想看的视频标题加几个关键词，它们就从页面上消失；另外也能按分区屏蔽直播、番剧这类推广内容。

Manifest V3，Edge 和 Chrome 都能装，纯 JavaScript，没有运行时依赖。

![version](https://img.shields.io/badge/version-1.5.4--beta-orange)
![browser](https://img.shields.io/badge/Edge%20%7C%20Chrome-Chromium-00aeec)
![tests](https://img.shields.io/badge/tests-324%20passed-brightgreen)

---

## 安装

1. 到 [Releases](https://github.com/ke25019/bili-title-filter/releases) 下载最新那个 zip，解压到一个固定的目录（别放下载文件夹里，容易被清理掉）
2. Edge 打开 `edge://extensions/`，左下角打开「开发人员模式」
3. 点「加载解压缩的扩展」，选择解压出来、里面有 `manifest.json` 的那一层目录

Chrome 用 `chrome://extensions/`，步骤一样。

装好之后打开 B 站，标题栏附近会出现一个「屏蔽助手」按钮。点它可以拖到任意位置，位置会记住。

扩展包内置简体中文与英文两种语言（`_locales/zh_CN`、`_locales/en`，manifest 里用 `__MSG_` 占位、`default_locale` 设为 `zh_CN`）。浏览器和扩展商店是按这套配置判断"支持哪些语言"的，所以提交到 Edge 加载项商店时，语言选项里应该能同时看到中文和英文；缺了 `_locales` 目录或者 `default_locale`，商店往往只认默认那一种。

---

## 怎么用

点浏览器工具栏的图标，或者点 B 站页面上那个「屏蔽助手」按钮，都能打开设置。最常用的就一个输入框：把不想看的词打进去、回车。也支持一次贴多个，用逗号或空格分开。

匹配方式可以调：区分大小写、按正则匹配、是否连 UP 主名字一起匹配。改动立刻生效，已经打开的 B 站页面会自动重新扫一遍。

---

## UP 白名单

有些 UP 的视频不管标题写成什么样都想留着，那就把 TA 加进白名单。

名单里填 **UP 名字**，要和卡片上显示的完全一致（不分大小写），比如 `某某UP主`。

名单里的 UP **不会被屏蔽** —— 关键词和分区开关都对 TA 无效，已经屏蔽过的也会立刻恢复显示。设置页和页面内面板里都能加，面板里是一行输入框 + 回车。

---

## 两种屏蔽效果

**整体遮蔽** —— 封面和标题合并成一整块，上面写着「根据您的屏蔽词已将此视频屏蔽」。鼠标移上去会自动把视频露出来，移开又恢复。文案可以自己改。

**完全隐藏** —— 视频直接不显示了。这里我默认按最早那版（v1.0.0）的做法来：只把内容藏起来、**位置留空**。这样页面不会重排，也不会把 B 站末尾那些空的骨架占位块顶到内容中间来。

如果你更想要紧凑的效果，可以在面板里关掉「隐藏时保留原位置」，卡片就会整个从布局里拿掉，后面的内容往前补位。两种都行，看你习惯哪个。

---

## 在哪些页面生效

设置页里可以单独决定两个页面要不要屏蔽：**站内搜索结果页**（search.bilibili.com）默认开，**UP 个人主页**（space.bilibili.com）默认关。登录页（`passport.bilibili.com`）一律不屏蔽 —— 那块登录卡片里的链接会命中推广域名规则，早先版本会把整个登录面板挡掉。

---

## 屏蔽分区推广

除了按标题，还能整类屏蔽这些推广：直播、番剧、国创、电影、电视剧、纪录片、综艺、课堂、专栏、动态、漫画、游戏、音乐、赛事、会员购、活动、广告。

番剧、国创、综艺、电影这几类是分开的，可以只屏蔽其中一类。

最后还有一个「其他推广」的兜底，用来收掉那些不属于上面任何一类的推广卡片（比如客户端下载、其它频道的推广）。它只在这张卡没有命中上面任何一类时才生效——所以你把「直播」关掉，不会被兜底规则又抓回来。

首页顶部那个大轮播横幅是单独一个开关（默认关着）：打开后整块直接隐藏，**不跟随「整体遮蔽 / 完全隐藏」的屏蔽方式**——横幅不是视频卡片，盖一块说明没有意义。它只作用于首页那一块，跟上面的勾选互不影响。

识别分区卡片这件事我没有写死某一个 class，判断顺序是：

1. 先看封面左上角的分区徽标：B 站自己把「番剧 / 国创 / 综艺 / 电影 / 赛事…」标在卡片上，这是最可靠的判据
2. 没有徽标时看卡片里的链接指向哪（`live.bilibili.com`、`/bangumi/play/`、`/cheese/play/`……）
3. 已知的卡片类名优先（`.feed-card`、`.bili-video-card` 这些）
4. 有些区域用的是 BEM 命名，就把 `bili-live-card__image--link` 这种子元素回推到卡片根
5. 都不是的话，往上找到第一层「同时包含标题和封面」的元素当卡片本体
6. 顶栏导航和几个藏着隐藏推广链接的区域是明确排除的

为什么先看徽标：实测番剧、国创、综艺、电影的推广卡片，链接**全都是** `//www.bilibili.com/bangumi/play/epXXXX`，光看链接根本分不出是哪一类；赛事卡片则多半是「直播预约」，链接落在直播间。只按链接判定就会出现「开番剧把国创综艺电影一起屏蔽」「赛事开关点了没反应」。

判断不出来的时候我宁愿不屏蔽，也不想把页面搞乱。所以有几个安全阀：容器里还装着别的卡片、尺寸超过 1200×800 或视口面积的 35%、元素尺寸是 0——任一命中就直接跳过。

---

## 页面上的悬浮面板

不想每次都开扩展设置页，所以我做了一个页面内面板。切到「完全隐藏」时，里面会多出「隐藏时保留原位置」这个开关。

面板可以按住拖动，位置存在浏览器里，底部有「重置位置」可以回到默认的标题栏右侧。

---

## 深色模式

遮蔽区域和面板会跟着 B 站的深色模式走。判断方式是看 `<html>` 上的 `dark` 属性 / `data-theme` / class，兜底再看页面背景色的亮度。也可以手动锁定成浅色或深色。

---

## 目录结构

```
bili-title-filter/
├── manifest.json          扩展清单
├── background.js          Service Worker：统计、徽标、默认值
├── shared/defaults.js     默认配置 + 分区类型定义（含识别规则）
├── content/
│   ├── content.js         扫描、匹配、屏蔽，以及页面内的悬浮面板
│   └── content.css        遮蔽区域、隐藏、深色模式的样式
├── popup/                 工具栏弹窗
├── options/               完整设置页
├── tests/                 jsdom 测试脚本（不参与扩展运行）
├── legacy/                旧版本源码归档，每个子目录都能单独加载
└── icons/
```

---

## 自己跑测试

```bash
cd tests
npm install
npm test
```

一共 324 项校验，覆盖屏蔽逻辑、分区识别、两种隐藏行为、设置页交互和后台统计。

测试里的模拟 DOM 和尺寸都是从真实页面上量出来的（`.floor-card-inner > .cover-container + .pb-16.px-12 > p.title` 这种工具类结构、`.vui_carousel` 包裹的轮播、`.palette-button-inner` 里 0×0 的隐藏链接等等）。

需要真实浏览器才能复现的问题，我用 `tests/browser-harness/` 里的脚本起一个独立的无头 Edge 来看，它只会关掉自己那个 profile 的进程。

---

## 常见问题

**勾了某个分区，但页面上还有该分区的内容？**
分区屏蔽现在只做卡片级。判断不出「封面 + 标题」在哪张卡上时我会直接跳过，所以少量结构特殊的推广位可能不会被处理。如果那是首页顶部的大轮播图，用那个单独的开关。

**有些推广卡片不属于我列的任何一类？**
打开「其他推广」兜底。它只在这张卡没命中具体分区时才生效。

**为什么有的视频没被屏蔽？**
先确认关键词确实在标题里。开了「区分大小写」或「正则」的话匹配会更严。也可以在设置页打开调试日志，在 B 站页面的控制台看命中情况。

**会不会拖慢页面？**
扫描用的是 `MutationObserver` 加 180ms 防抖，只处理新增或被改动的卡片。分区识别只在你开了对应开关时才跑，而且有数量和频率上限。

**统计数字比实际看到的多？**
B 站是单页应用，滚动和切页会让卡片重新渲染，所以统计的是「屏蔽次数」的近似值。

---

## 更新记录

按时间倒序。这里记的是每次改了什么、为什么改，包括我自己搞错的地方。

### 1.5.4

**「赛事」第二次失效的原因找到了：B 站把徽标外面那层容器的类名换了。** 这类卡片唯一的身份标识就是封面角标 —— 它的链接是直播间，跟普通直播卡片一模一样，所以角标读不到就只能按链接判定，于是被算成「直播」，「赛事」开关点了当然没反应（反馈里"只有赛事没被屏蔽"就是这个）。这次把这条路径整个松开了：

- **角标容器的类名不再写死**：`.badge` 之外，`[class*="cover-tag"]`、`[class*="corner"]` 这类同义类名一起认；再兜底一条 —— 落在封面区域里、且不超过 6 个字的短文案（番剧/国创/综艺/电影/课堂/直播/赛事 都是这种）也当角标用。
- **同义词也算数**：徽标写「赛事」「电竞」「比赛」「电竞赛事」「赛事直播」都归到「赛事」这一类（B 站换过说法）；电竞直播间路径 `/blanc/` 也加进了链接判据。
- **顺带修掉一个更隐蔽的连带问题**：角标元素 `.floor-title` 和"标题选择器"同名。以前只要它落在 `.badge` 里就会被排除掉，容器一改名就排除不掉 —— 于是角标文案被当成了卡片标题，通用识别在封面那一层就认定"标题 + 封面齐全"，**卡片只被遮住封面那一块**，下面的标题和 UP 名留在页面上。现在"封面上的短文案一律算角标"这条判据同时用在角标读取和标题排除上，两边不会再各说各话。

**排查用的日志更全了**。打开设置页的「输出调试日志到控制台」后：每张带角标的分区推广卡片第一次被看到时，会打印「角标文案 → 判定成哪一类 → 卡片链到哪」，一眼就能看出是角标变了、词变了还是链接变了；广告位那边除了"遮的是哪一层"，还会打印**从广告位往上三层的结构链**（元素 + 实测尺寸），广告认出来但开关没开时也会明确写出来 —— 以前这种情况页面上毫无痕迹，很难区分"没认出来"和"开关没开"。

### 1.5.3

**弹幕列表里的推广条不再「只遮一条线」**。反馈原文是：播放器右边的广告「把弹幕列表算进去了」，而且「上面会有一些像素露在外面」。查下来是三个独立的毛病：

**① 收敛会一路收进弹幕列表面板**。面板里没有视频卡片、尺寸也没超上限，原来那两条判据拦不住它。现在多了几道：面板类名（`danmubox`、评论区、推荐流、播放器…）直接停；子元素个数超过 6 停（广告卡只有两三个子节点，列表不会）；只是顺带匹配上类名的空壳子元素不再算「别的卡片」。

**② 真正让像素露出来的是行内元素**。广告位经常整个就是 `<a class="ad-report">`（行内盒）：绝对定位的遮罩放在行内盒上会错位，而且 `overflow:hidden` 对行内盒根本不生效 —— 遮罩缩成一条细线，底下的图片和文字照样露出来，就是截图里那条虚线加露出来的几个像素。现在先把广告位收到**块级宿主**再动手；收敛过程中遇到行内盒（以及量不到尺寸的包装层）是**跳过继续往上**，而不是就此停住 —— 停住的话，同一条广告链上的不同节点会各自收到不同的一层，最后套出好几块遮罩（这个坑实现时真踩到了，测试用例报红才发现）。

**③ 顺带修掉「播放器横幅怎么都不屏蔽」**。广告位以前会被 `isNestedCard` 卡死：那个判断看的是「祖先有没有被处理过」，而**没被屏蔽**的卡片同样带着这个标记（`clearBlock` 也会写），所以页面上一旦有容器被误判成卡片，它里面的广告位就永远轮不到处理。现在只有祖先**真的被遮住**才跳过。横幅自身的识别也不再绑死 `.right > .inside-bg` 这一层，改成「扫全部 `.inside-wrp` 再按结构筛」，并补了「图片走 `/bfs/activity-plat/`」这条兜底判据。

另外加了个排查用的东西：打开设置页的「输出调试日志到控制台」后，日志里会写明**每块广告的遮罩宿主是哪个元素、实测多大**（例如 `广告位遮罩宿主： DIV.ad-card-wrapper 350×250`）；如果广告认出来了但「广告」开关是关着的，也会打一条 `发现广告位，但「广告」开关是关的：…` —— 以前这种情况页面上一点痕迹都没有，很难区分"没认出来"和"开关没开"。

拿到使用者贴的播放器贴片广告完整 outerHTML 之后，选择器与注释也按实测改准了：真实结构是 `#slide_ad.slide-ad-exp > .slide-gg > .van-slide.item-box > .item > .ad-report.link > a.ad-report-inner`，外加 `img.gg-pic`（广告角标）和 `.close-btn`（关闭按钮）—— 这里的 `gg` 就是"广告"，B 站自己就是这么命名的。`.slide-gg` 也加进了广告位名单，并补了「整块被收进遮罩宿主、里层不各自遮一次」的回归用例。

### 1.5.2

**右栏广告卡不再「只挡住一半」**。上一版把广告位本身遮住了，可卡片上的标题、UP 名和「广告」角标挂在外层容器上，于是那行字还露在页面上。根源是那层容器的类名不在任何已知列表里，写死类名必然会漏。现在的做法是**从广告位往上收**，收到「仍然只装着这一块广告」的最外层再动手，判据三条：这一层里没有别的卡片（有就说明到了推荐列表）、没有第二块广告位、尺寸还在卡片量级（宽 ≤ 600、高 ≤ 560）。第三条同时挡住了最坏情况 —— 播放器那层容器是 1130×640 起步，永远不会被当成广告卡。外壳的身份也不再靠「里面装着广告」去猜（那样整列推荐都可能被认成广告），而是认出来的时候明确标记。

顺带修掉一个连带问题：广告位里的链接以前还会走「命中链接 + 标题 + 封面」的通用识别，而列表容器恰好同时有标题和封面，于是那块广告的链接会被一路猜到**整个列表容器**上，把整列推荐一起遮掉。现在广告位里的链接统一交给广告扫描处理，不再按链接往上猜。

**播放器里的活动横幅广告**也归到「广告」这一项。实测结构是 `.inside-wrp > .left > .l-inside > .hinter-msg`（那行文案）与 `.right > .inside-bg.clickable > .b-img > img`（图片来自 `/bfs/activity-plat/static/`），文案和图片是分开的两个兄弟节点 —— 只按链接或只按图片识别都会漏掉一半。所以判据带上结构（必须同时有图片块和文案行），并且**整块一起屏蔽**：只挡右边图片的话，左边那行「开学季…」会留在页面上。类名 `.inside-wrp` 在 B 站多处活动位都在用，所以没写进卡片名单，避免误伤同名容器。

### 1.5.1

**播放页的广告终于能被屏蔽了**。反馈里说播放页的广告怎么屏蔽都还在，「广告」开关点了没反应，看着像是整页被放行了。查下来是这么回事：播放器里的贴片广告（`#slide_ad` > `.slide-ad` > `.van-slide-item-box` > `.ad-report-link` > `a.ad-report-inner`）和右栏那张广告卡（`.video-card-ad-small` > `.ad-report-inner` > `a.ad-report`）都不在已知的视频卡片类名里，而且广告**没有标题**，所以走不了「命中链接 + 标题 + 封面」的通用识别 —— 实测一个都收不上来，等于这两块从来没进过屏蔽流程，跟页面级开关没关系。现在这两类广告位按类名显式认出来（`AD_SLOT_SELECTOR`），并且直接判为「广告」，不再往链接上猜：广告卡片里常混着 `/topic-detail`、活动页之类的链接，按链接判定会被排在 `TYPES` 前面的「活动」抢走。嵌套的 `.ad-report-link` / `.ad-report-inner` 会被当成嵌套卡片跳过，只留最外层一块遮罩。

顺带把「播放页会不会被当成 UP 主主页」写成回归用例了：页面级开关只看域名（`space.bilibili.com` / `search.bilibili.com`），播放页永远照关键词和分区开关办事。右栏那个 UP 主信息块（`.up-info-container`）不是卡片，也不会被「其他推广」抓走。

### 1.5.0

**这一版是测试版**（这批改动原本做成了 1.4.2 正式版，但那个版本没有公开发布，最后改为以 1.5.0 测试版发出来）。

**修掉登录页被「其他推广」整块挡住的问题**（感谢 [@ziye081220](https://github.com/ziye081220) 反馈）。B 站的登录在 `passport.bilibili.com`，登录卡片里的链接正好命中「其他推广」的域名规则，于是整块登录面板被当成推广屏蔽掉。现在：登录页（`passport.bilibili.com`，以及路径里带 `login` 的页面）一律不屏蔽；`passport` 也从「其他推广」的域名规则里排除；`login` 相关区域加入了卡片扫描的排除名单。

**新增两个页面级开关**（设置页「在哪些页面生效」）：

- **站内搜索结果页**（search.bilibili.com）：默认**开**，跟以前一样照常屏蔽
- **UP 个人主页**（space.bilibili.com）：默认**关** —— 主页上大多是 TA 自己的作品，默认不动它，需要的时候可以打开

登录页不受这两个开关影响，永远不屏蔽。

### 1.4.1

**扩展包补上本地化声明，商店的语言选项不再只有英文。** 之前打出来的包没有 `_locales` 目录、manifest 里也没有 `default_locale` —— 提交到 Edge 加载项商店时，Partner Center 读不到任何语言声明，语言选项就只剩一个 en-US（商店里那份 v1.2.0 的清单快照里确实看不到本地化配置）。

现在包里带了 `_locales/zh_CN/messages.json` 与 `_locales/en/messages.json`，manifest 用 `default_locale: zh_CN` 加 `__MSG_` 占位声明名称、简介和图标提示。商店会按浏览器语言显示对应文案，语言列表里应当能同时看到中文（简体）和英文。

**本地化文案按商店的字数上限收紧了。** en 那份简介原来太长，提交到 Edge 加载项商店时报「Description 的转换过长，超出 190 字符」。现在中英文简介都压到 132 字符以内（Chrome 的口径更严，按这个卡两边都不会被退），名称也控制在 45 字符内，并把这两条写成了校验。

**扩展里不再放微软扩展商店的链接。** 设置页页脚只留 GitHub 仓库地址，避免商店页面对不上时点进去看到旧版本。功能与 1.4.0 完全一致，只是打包内容与这一行链接变了。

### 1.4.0

1.3.x 系列转为正式版，内容与 1.3.3-beta 一致，版本号定为 1.4.0。

**扩展包补上了本地化配置。** 包里新增 `_locales/zh_CN` 与 `_locales/en`，manifest 用 `default_locale: zh_CN` 加 `__MSG_` 占位来声明名称、简介和图标提示。Edge 加载项商店正是读这套配置来决定语言选项的——之前只提供一个语言，提交时语言下拉里就只剩英文。

这一版相对 1.2.0 换了分区推广的分类方式（改成看封面徽标）、修掉一批占位与空框问题、加了 UP 白名单，并把协议改成 PolyForm Noncommercial 1.0.0（禁止商用）。具体改动见下面的 1.3.3 / 1.3.2 / 1.3.1 / 1.3.0 几条。

### 1.3.3

**移除了首页顶部横幅广告的屏蔽。** 1.3.2 把首页最上方那张横幅图（`.bili-header__banner`）也并进了「屏蔽首页顶部轮播横幅」开关，这一版把它拿掉：这个开关只管轮播，头部横幅图不再碰。

**这个开关改成"一开就整块完全隐藏"。** 以前它跟随「整体遮蔽 / 完全隐藏」：遮蔽模式下会在横幅上盖一块说明。但横幅不是视频卡片，盖说明没有意义——打开的意图就是"这块别出现"，所以现在无论当前是哪种屏蔽方式，都是整块直接隐藏（连外层的灰底空壳和占着的网格项一起收掉，后面的内容照常补位）。设置页、工具栏弹窗和页面内面板里那个开关的说明也一起改成了这个说法。

**设置页页脚加了两个链接。** GitHub 仓库和微软扩展商店，方便直接查更新。


**白名单修了一个会漏的 bug。** 屏蔽词是按「包含」匹配的，而白名单要求名字完全相同 —— 于是关键词写「某UP」、白名单里写「某UP主」时，卡片照样被屏蔽。现在白名单也按包含匹配（忽略大小写，名单项和名字互相包含都算），站内搜索结果页那种名字写法略有出入的卡片也能正常放行。

**补了版权声明和协议说明。** 设置页页脚和工具栏弹窗里都写上 `Copyright (c) 2026 ke25019`，并注明基于 PolyForm Noncommercial 1.0.0 发布、禁止商用。

**开源协议从 Apache 2.0 换成 PolyForm Noncommercial 1.0.0。** 也就是不允许任何商业用途：可以为非商业目的使用、修改和分发，但必须保留版权声明。仓库里的 `LICENSE`、三个 README 的许可证段落与徽章都一起换了。

**声明里加了一条「站内搜索不保证」。** 搜索结果页的卡片结构和首页不一样，不承诺每条结果都按预期屏蔽。

### 1.3.2

**完全隐藏时，轮播横幅那块位置现在真的会让出来。** 1.3.1 把隐藏做到了外层 `.carousel`，但实测还不够：`.recommended-swipe-body` / `.recommended-swipe-body-normal` 是 `position:absolute;inset:0` 外带一层灰底（`--graph_bg_regular`）的盒子，轮播一藏它就露出来；而 `.recommended-swipe` 本身是网格项（`grid-column:1/3`、`grid-row:1/3`），高度是里层 `.shim-card`（`height:0` + `padding-top:56.25%`）撑起来的 —— 只藏轮播的话，页面上方那个 2×2 的格子仍然占着，后面的视频顶不上来。现在完全隐藏会一路收到 `.recommended-swipe` 这一层，整块拿掉，格子被后面的卡片补上。安全阀照旧：这一层里除了轮播还有别的内容（已加载的图片、别的文字）就不往上走。

**这一版还把首页最上方的横幅广告（`.bili-header__banner`）并进了同一个开关**，1.3.3 已按反馈移除——那个开关只管轮播。

### 1.3.1

**新增 UP 白名单。** 名单里的 UP 不会被屏蔽 —— 关键词和分区开关都对 TA 无效，已经屏蔽过的也会立刻恢复。名单项填 UP 名字，要和卡片上显示的完全一致（不分大小写）。设置页有词条列表 + 批量编辑，页面内面板里也加了一行，和屏蔽词一样回车就能加。

顺手把面板里那句多余的提示删了：遮蔽模式下它也跟着显示（「开启：视频不显示但位置留空……」），可那个开关只对完全隐藏有意义，看着莫名其妙。

**首页顶部轮播横幅改成跟随屏蔽方式。** 以前这个开关只做一件事：给 `.vui_carousel` 加 `display:none`。可实测 B 站这里 `.carousel`、`.carousel-container`、`.vui_carousel` 三层都是 `height:100%`，只隐藏最里面那层，外层会留下一个空白框；而且它消失得无声无息，没有任何说明。现在：**完全隐藏** 时一路处理到外层 `.carousel`，整块真的收起来、页面不留空白；**整体遮蔽** 时跟卡片一样盖一块说明，写清「已按开关屏蔽首页顶部轮播横幅」以及怎么恢复。

### 1.3.0

**分区推广改成看封面左上角的徽标来分类。** 以前按卡片里的链接判定，可两张链接一模一样的卡片可能属于不同分区：实测番剧、国创、综艺、电影的推广卡片，链接**全都是** `//www.bilibili.com/bangumi/play/epXXXX`；赛事卡片则多半是「直播预约」，链接落在直播间。结果是「番剧」开关把国创、综艺、电影一起屏蔽了，而「赛事」开关点了完全没反应。现在先看 B 站自己标在封面上的分区名，认不出来再退回链接和类名判定。

**「影视」拆成了四个开关，并新增「国创」。** 分区从 14 类变 18 类：直播、番剧、国创、电影、电视剧、纪录片、综艺、课堂、专栏、动态、漫画、游戏、音乐、赛事、会员购、活动、广告，外加「其他推广」兜底。以前开「番剧」会连带屏蔽国创、综艺、电影，开「影视」会连带屏蔽电视剧、纪录片、综艺；现在每一类单独开关。

注意：老配置里的「影视」只对应新的「电影」，「番剧」不再连带国创，电视剧、纪录片、综艺默认关闭，需要的话单独打开。

### 1.2.0

1.1.x 系列转为正式版，内容与 1.1.12-beta 一致，只把版本号定为 1.2.0。

> **注意：这个版本已被证实存在 bug，不建议使用。** 一是分区推广按链接分类，导致「赛事」开关点了没反应、「番剧」会连带屏蔽国创 / 综艺 / 电影（1.3.0 起改成看封面徽标）；二是隐藏卡片时外层容器的样式没命中，会残留白色空框（1.3.3 修掉）。请升级到最新版本。

**外层容器的隐藏样式一直没生效。** CSS 里写的是 `.bf-blocked.bf-hide` 和 `.bf-blocked.bf-hide-slot`，而外层容器（`.floor-card` 那层带边框、白底和 40px 阴影的盒子）只会拿到 `bf-hide` / `bf-hide-slot`，永远没有 `bf-blocked` —— 类名打上了，样式一条都没命中。结果就是卡片内容消失、白壳还留在页面上，也就是反馈里说的「占位符没删干净」。现在这两条规则改成裸类名：保留位置时对元素自身 `visibility:hidden`，前移补位时 `display:none`，边框、背景、阴影和背后的灰层一起消失。

**分区徽标被当成了视频标题。** 封面左上角的徽标是 `.badge > .floor-title`，跟标题选择器同名，而且就在封面链接内部。后果有两个：卡片识别在封面链接上就停下，把一个链接当成一整张卡片；关键词拿到的「标题」其实是「番剧」这类分区名，真正的标题被完全忽略。现在徽标文字一律不算标题。

**直播推广卡片识别不出来。** 标题判据里有一条「标题元素的后代不超过 4 个」，而直播卡片的标题里带着「直播中」角标 —— `<div class="living">` 套 `<picture>`，里面还有两个 `<source>` 和一个 `<img>`，再加上 `<span>`，实测 8 个后代元素，整条标题直接被判掉，卡片因此完全识别不出来。上限按实测值放宽到 12，直播卡片正常命中。

**分区推广卡片的发现路径。** 筛候选卡片时不再只看设置里打开的那几个分区开关（否则只开「直播」时，番剧等推广卡片永远扫不到）；懒加载插入的推广卡片会立刻触发一次扫描，不用等滚动。

### 1.1.11

按提示去翻了 bilibili.com 的页面源码，把用灰色占位色（`--graph_bg_regular`）的元素都列了出来：`.floor-card`（带边框和阴影）、`.recommended-swipe-body`（左上角大块里铺满灰底的 body）、`.layer.tiny`、`.bili-video-card__image--wrap`、`.v-img`、各种 `__skeleton--*`，以及轮播里空的 `.extension-tips-v2`。

它们全都藏在卡片容器里面，所以要靠「隐藏卡片时把容器一起处理」来覆盖。上一版的做法有个漏洞：**容器里装着不止一张卡片时我会提前停下**，于是容器自己的灰底就露出来了。现在改成——只要容器里的卡片**全都被隐藏了**，而且除了这些卡片没有别的真实内容，就继续往上把容器一起处理。容器的判定每次都会重算，所以同一容器里第二张卡被隐藏时容器也会跟着藏起来。

顺带发现一个更要紧的问题：尺寸安全阀原来定的是「超过 1100×700 或视口 15% 就跳过」，而左上角那个 2 列大块实测是 580×485、约占视口 25% —— **意味着那个位置里的视频从来就没被屏蔽过**。现在放宽到 1200×800 / 35%，既能覆盖它，也仍然拦得住真正的灾难（实测过的 1401×808 整页容器）。
### 1.1.10

有人在反馈里贴了一张截图，上面那条淡边线让我找到了问题。B 站的分区推广卡片外面还套着一层 `.floor-card`，带边框、白底和 40px 阴影，而卡片本体在里面。我之前只把隐藏打在本体上，所以内容没了、外壳还留在页面上——保留位置和前移补位两种模式都有这个问题。

现在会从卡片往上找到「只装着这一张卡」的最外层容器，隐藏时一起处理：保留位置时给它 `visibility:hidden`（边框、背景、阴影一起消失，位置还留着），前移补位时给它 `display:none`（整个网格项拿掉，不留空框）。

### 1.1.9

修上一版留下的白色空盒子。之前「保留位置」是把卡片的**子元素**藏起来，卡片自己的背景和边框还在，看起来就是个空的白盒子。v1.0.0 之所以自然，是因为它藏的是里面那张卡、外层没有背景。现在改成对卡片自身 `visibility:hidden`，位置留着、连背景边框一起消失。

### 1.1.8

把「前移补位」这条路径整个过了一遍，修掉五个问题：找网格只看直接父元素（隔一层就找不到）、每次都先清空类再加（滚动时抖）、判定空占位要求没有 `<img>`（带未加载图片的骨架漏判）、只扫直接子元素（嵌在楼层里的漏掉）、以及无差别隐藏空元素（可能藏掉撑高度的容器）。另外把定时复核从 2.5s 收到 1.5s。

### 1.1.7

收到反馈说只有 v1.0.0 的完全隐藏好用，我就把两个版本用同一份真实 DOM 跑起来对比，找到了原因：v1.1.0 我把 `.bili-feed-card` 加进了卡片选择器，隐藏目标从「卡片内容」变成了「整个网格项」，网格因此重排，腾出的格子被 B 站末尾的空骨架占位块填上。于是加了「隐藏时保留原位置」开关，默认按 v1.0.0 的行为来。

### 1.1.6

修一个我自己引入的 bug：尺寸安全阀用「命中原因是否相同」做判断，而完全隐藏时卡片是 `display:none`（尺寸为 0），命中词一变就会被安全阀拒绝处理，切回遮蔽后卡片再也不恢复。顺带发现 `hasLayoutEngine()` 的结果被永久缓存，如果第一次调用时 `body` 还没渲染好，安全阀会整场失效。

### 1.1.5

修完全隐藏时内容中间冒出的灰色空块。B 站的推荐流网格末尾放着一批只含骨架屏的空占位项，我把前面的卡片隐藏后，网格会把它们拉到前面填空。现在在「前移补位」模式下会把这类空占位项一起收敛（加载哨兵只做隐身、保留布局盒，不影响继续加载）。

### 1.1.4

用无头 Edge 实测后重写了分区识别。之前「活动」一开就整页被过滤——从隐藏的 0×0 推广链接向上跳了三层，落到了一个 1401×808 的侧边按钮容器上。分区推广的封面和标题之前也被分开遮蔽（真实卡片用的是工具类名，不是 BEM）。这一版把「整行板块」删掉了，改成单独的「屏蔽首页顶部轮播横幅」开关。

### 1.1.3

第一次补分区类型（9 类补到 14 类，加了「其他推广」兜底），也想修页面空白的问题——但没修对，真正的根因是 1.1.4 才找到的。

### 1.1.0

分区推广屏蔽之前完全没效果，因为只按 class 判断。这一版改成从卡片里的链接反推类型。同时把整体遮蔽改成鼠标悬停自动展示，悬浮按钮也支持拖动了。

### 1.0.0

第一个版本：按标题屏蔽词屏蔽视频，两种屏蔽方式，9 类分区推广，页面内面板，深色模式。

---

## 贡献者

- [@ziye081220](https://github.com/ziye081220)：反馈了「登录页被其他推广整块屏蔽」这个 bug（1.5.0 修复）

---

## 许可证

本项目基于 [PolyForm Noncommercial License 1.0.0](LICENSE) 发布。

你可以为非商业目的自由使用、修改和分发本软件，但必须保留原始版权声明，且不得用于任何商业用途。

Copyright (c) 2026 ke25019

---

## 免责声明

1. **非官方工具**：本项目为个人开源项目，与哔哩哔哩（B站）官方无任何关联，未获得 B站的官方授权或认可。
2. **站内搜索不保证**：站内搜索结果页（search.bilibili.com）的卡片结构和首页不完全一样，无法保证每一条结果都按预期屏蔽，遇到漏网或误伤请以实际页面为准。
3. **使用风险**：本工具通过注入脚本修改 B站页面内容，可能违反 B站《用户使用协议》中关于禁止使用自动化脚本获取或干预平台内容的相关条款。用户应自行评估使用风险。
4. **数据安全**：本扩展仅读取页面本地数据用于过滤操作，不收集、不上传任何用户个人信息至外部服务器。
5. **责任限制**：本软件按“原样”提供，不提供任何明示或暗示的担保。作者不对因使用本工具导致的账号封禁、数据丢失或其他损失承担责任。
